<resources>
    <string name="app_name">CapTab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_orders">Orders history</string>
    <string name="placeOrder">Place order</string>
    <string name="order_placed">Order placed</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_registered_num">Registered number</string>
    <string name="menu_manage_payment">Manage payment</string>
    <string name="menu_refer_and_earn_offers">Refer and earn offers</string>
    <string name="menu_suggestions">Suggestions</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="search_products">Search products.........</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
</resources>